Working Restaurant routes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "ejs": "2.3.4",
+    "express-react-views": "^0.10.5",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
@@ -20,6 +21,8 @@
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
     "rc": "1.0.1",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
     "swig": "^1.4.2"
